# cubature

./: .gitignore  CMakeLists.txt  COPYING.md  Makefile  NEWS  NEWS.md  README  README.md  clencurt_gen.c  converged.c  cubature.c  cubature.h  hcubature.c  pcubature.c  redblack.h  scubature.c  test.c  vwrapper.h
